-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 7u45, 8, 9
-
Component/s: client-libs
-
Environment:
Mac OS X
-
b70
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135912 | emb-9 | Unassigned | P2 | Resolved | Fixed | team |
| JDK-8129146 | 8u65 | Andrew Brygin | P2 | Resolved | Fixed | b02 |
| JDK-8050962 | 8u60 | Andrew Brygin | P2 | Closed | Fixed | b20 |
| JDK-8138225 | emb-8u65 | Unassigned | P2 | Resolved | Fixed | b02 |
| JDK-8129670 | emb-8u60 | Andrew Brygin | P2 | Resolved | Fixed | b20 |
Note that desktop settings is ON, not some LCD, regardless of monitor, be it a generic old Sony or iMac.
It's easy to see that fonts have grayscale antialiasing in Swing component by default.
Change the value in Demo to LCD_HRGB and play with size of the "The sky is blue": apparently hint is still ON, and hinting gray.
Now, add somewhere to line 524 in demo a line
g2Image.setRenderingHint(RenderingHints.KEY_FRACTIONALMETRICS, RenderingHints.VALUE_FRACTIONALMETRICS_ON); compile and run again.
All of a sudden LCD_HRGB start working, and letters in the sample have visible color tint.
Now, is it a bug? Shouldn't LCD hints be default on Mac for Swing?
It's not a regression, I believe, not between 7 and 8 releases.
2D_Font/SwingAntialiasLCDTextTest
- backported by
-
JDK-8129146 [macosx] LCD Rendering hints seems not working without FRACTIONALMETRICS=ON
-
- Resolved
-
-
JDK-8129670 [macosx] LCD Rendering hints seems not working without FRACTIONALMETRICS=ON
-
- Resolved
-
-
JDK-8135912 [macosx] LCD Rendering hints seems not working without FRACTIONALMETRICS=ON
-
- Resolved
-
-
JDK-8138225 [macosx] LCD Rendering hints seems not working without FRACTIONALMETRICS=ON
-
- Resolved
-
-
JDK-8050962 [macosx] LCD Rendering hints seems not working without FRACTIONALMETRICS=ON
-
- Closed
-
- duplicates
-
JDK-8098853 [PIT] [macosx] Fonts look much darker than before in the PIT build for b68
-
- Closed
-
- relates to
-
JDK-8138565 LCD Rendering hints do not work for font sizes larger than 100 points
-
- Closed
-
-
JDK-8134331 [macosx] Support of LCD rendering in Swing
-
- Open
-