8023794: [macosx] LCD Rendering hints seems not working without FRACTIONALMETRICS=ON

Reviewed-by: serb, prr