jdk/src/java.desktop/share/native/common/java2d/opengl/OGLContext.c
@@ -750,7 +750,7 @@ OGLContext_IsLCDShaderSupportAvailable(JNIEnv *env,
     // finally, check to see if the hardware supports the required number
     // of texture units
     j2d_glGetIntegerv(GL_MAX_TEXTURE_IMAGE_UNITS_ARB, &maxTexUnits);
-    if (maxTexUnits < 4) {
+    if (maxTexUnits < 2) {
         J2dRlsTraceLn1(J2D_TRACE_INFO,
           "OGLContext_IsLCDShaderSupportAvailable: not enough tex units (%d)",
           maxTexUnits);
